
--- Experimental type comprehension branch

Added type comprehension system
Added --nopassingstructsbyvalue flag to force struct parameters to be passed as pointers
**BREAKING CHANGE** Renamed the "type" field of classes/structs/unions in the JSON output (the one that contained
"struct"/"class"/"union") to "kind" to avoid confusion with the actual type.

--- v0.04 WIP

Put quotes back on string define values in the metadata
Fixed incorrect codegen for synthetic #define elements
Changed document filename to be the output filename (fixes include guard naming)
Removed "#pragma once" removal (by default)
Added a protective "extern C" around the majority of the header file, and removed it from the generated binding CPP
Fixed blank lines emitting indenting
Fixed invalid use of "static" in linkage specification [@rokups]
Added alignment for enum/structure members and function names
Added support for ImStr
Added auto-generation of variant functions that take const char* instead of ImStr
Suppressed generation of default argument variants for trivial cases and uncommon functions to reduce clutter
Fixed incorrect disambiguation of function pairs that appear in the #if/#else blocks of the same preprocessor conditional
Fixed incorrect generation of conditionals around code in #else blocks
Added support for (read: removal of) constexpr
Fixed disambiguation of default argument functions resulting in Ex functions with names that don't match their argument list (#11)
Reduced number of Ex functions (when trailing arguments are trivial to fill, e.g. flags = 0, an Ex functions is not warranted). (#10)
Split code_dom into multiple files for tidiness and refactored the modules a bit
Improved the header template system somewhat and added a header to all files (#18, #22)
Made it possible to configure types/names of "trivial" arguments that will not get default helpers generated (#24)
Changed order of Ex functions relative to the original (#23)