@@ -194,10 +194,12 @@ def emit_function_pointer_type(function_ptr):
 
 
 # Emit data for a single type
-def emit_type(type_info):
+# declaration_suffix is a workaround to allow us to include array information that is currently stored outside
+# the main type for arguments/fields
+def emit_type(type_info, declaration_suffix=""):
     result = {}
 
-    declaration = type_info.to_c_string()
+    declaration = type_info.to_c_string() + declaration_suffix
 
     result["declaration"] = declaration
 
@@ -205,11 +207,9 @@ def emit_type(type_info):
         # Special case for function pointers - we want to include a parsed version as well
         result["type_details"] = emit_function_pointer_type(type_info)
 
-    # Hack to ignore <anonymous> types for now
-    if declaration[0] != '<':
-        # Emit type description as generated by the type comprehension system
-        description_type = type_comprehension.type_comprehender.get_type_description(declaration)
-        result["description"] = emit_type_comprehension_element(description_type)
+    # Emit type description as generated by the type comprehension system
+    description_type = type_comprehension.type_comprehender.get_type_description(declaration)
+    result["description"] = emit_type_comprehension_element(description_type)
 
     return result
 
@@ -264,36 +264,35 @@ def emit_typedef(typedef):
     return result
 
 
-# Emit data for a single field
-def emit_field(field):
-    result = {}
-
-    names_root = []
-    result["names"] = names_root
-
-    # Emit all the field names
+# Emit data for a single field (which may actually contain multiple fields if it has several names)
+# In the case where there are several names we pretend they are each a distinct field, to avoid complicating
+# the JSON to support a corner-case of C syntax
+def emit_field(container, field):
+    # Emit one field for each of the field names
     for i in range(0, len(field.names)):
-        name_root = {}
-        names_root.append(name_root)
+        field_data = {}
 
-        name_root["name"] = field.names[i]
-        name_root["is_array"] = field.is_array[i]
+        declaration_suffix = ""
+
+        field_data["name"] = field.names[i]
+        field_data["is_array"] = field.is_array[i]
         if field.is_array[i]:
-            name_root["array_bounds"] = code_dom.common.collapse_tokens_to_string(field.array_bounds_tokens[i])
+            field_data["array_bounds"] = code_dom.common.collapse_tokens_to_string(field.array_bounds_tokens[i])
+            declaration_suffix = "[" + field_data["array_bounds"] + "]"
 
         if field.width_specifiers[i] is not None:
-            name_root["width"] = str(field.width_specifiers[i])
+            field_data["width"] = str(field.width_specifiers[i])
 
-    result["is_anonymous"] = field.is_anonymous
+        field_data["is_anonymous"] = field.is_anonymous
 
-    # Emit the type
-    result["type"] = emit_type(field.field_type)
+        # Emit the type
+        field_data["type"] = emit_type(field.field_type, declaration_suffix)
 
-    add_comments(field, result)
-    add_preprocessor_conditionals(field, result)
-    add_internal_flag(field, result)
+        add_comments(field, field_data)
+        add_preprocessor_conditionals(field, field_data)
+        add_internal_flag(field, field_data)
 
-    return result
+        container.append(field_data)
 
 
 # Walk into a container (initially a struct) and emit field declarations for any fields found
@@ -304,7 +303,7 @@ def emit_struct_field_list(container, fields_root):
     for child in container.children:
         if isinstance(child, code_dom.DOMFieldDeclaration):
             # Regular fields
-            fields_root.append(emit_field(child))
+            emit_field(fields_root, child)
         elif isinstance(child, code_dom.DOMClassStructUnion):
             # Nested structs
 
@@ -318,12 +317,9 @@ def emit_struct_field_list(container, fields_root):
                 dummy_field.is_array = [False]
                 dummy_field.width_specifiers = [None]
                 dummy_field.is_anonymous = child.is_anonymous  # Technically wrong, but see above
-                # We intentionally don't use utils.create_type() here because if this is an anonymous struct our
-                # synthetic name will (deliberately) contain characters that aren't valid in a C++ typename
-                dummy_type = code_dom.DOMType()
-                dummy_type.tokens = [utils.create_token(child.name)]
+                dummy_type = utils.create_type(child.name)
                 dummy_field.field_type = dummy_type
-                fields_root.append(emit_field(dummy_field))
+                emit_field(fields_root, dummy_field)
         else:
             # If we find anything else, recurse into it to look for fields (as it may be a preprocessor declaration
             # or similar)
@@ -360,7 +356,10 @@ def emit_function_argument(argument):
     if argument.name is not None:
         result["name"] = argument.name
     if argument.arg_type is not None:
-        result["type"] = emit_type(argument.arg_type)
+        declaration_suffix = ""
+        if argument.is_array:
+            declaration_suffix = "[" + str(argument.array_bounds) + "]"
+        result["type"] = emit_type(argument.arg_type, declaration_suffix)
     result["is_array"] = argument.is_array
     result["is_varargs"] = argument.is_varargs
     if argument.is_array:
