@@ -8,5 +8,5 @@ def apply(dom_root):
     index = 0
     for struct in dom_root.list_all_children_of_type(code_dom.DOMClassStructUnion):
         if struct.is_anonymous and struct.name is None:
-            struct.name = "<anonymous" + str(index) + ">"
+            struct.name = "__anonymous_type" + str(index)
             index += 1
